# pyrometheus

./: .gitignore  .readthedocs.yml  .rtd-env-py3.yml  .test-conda-env-py3.yml  CITATION.cff  CLAUDE.md  LICENSE  MANIFEST.in  MFC.f90  README.rst  pyproject.toml  requirements_doc.txt  setup.cfg  setup.py
.ci/: generate-example-mech.py  generate-test-mech.py
.github/workflows/: ci.yml  mfc.yml  new.yaml  spack.yml
doc/: .gitignore  codegen.rst  conf.py  export-tex.sh  index.rst  misc.rst  model.rst  start.rst
example/: symbolic_arrays.cpp
examples/: autoignition.py  characteristics.py  domain.py  environment.yml  flame-pp.ipynb  flame_driver.py  gpu_driver.py  make_mixture_arrays.py  make_pyro.py  profiling.py  pyro_jax.py  pyro_pyopencl_example.py  python_driver.py  reactors.py  requirements.txt  steady_flamelet.py  time_integ.py
examples/flamelet/: flamelet.ipynb
examples/flamelet/.ipynb_checkpoints/: flamelet-checkpoint.ipynb
examples/free_flame/: characteristics.py  domain.py  flame_driver.py  make_mixture_arrays.py  reactors.py  time_integ.py
examples/free_flame/input/: flame_demo.yaml  flame_ehtylene_er_0d8.yaml  flame_ehtylene_er_1d2.yaml  flame_hydrogen_er_0d8.yaml  flame_hydrogen_er_1d2.yaml
examples/free_flame/output/: autoignition.h5
examples/input/: autoign_demo.yaml  flame_ehtylene_er_1d0.yaml  flame_hydrogen_er_1d0.yaml
examples/mech/: bfer.yaml
examples/postshock_relax/: isothermal.py
pyrometheus/: __init__.py  __main__.py  chem_expr.py  cli.py  make_array.py
pyrometheus/bandit/: __init__.py  general_thermochem.py
pyrometheus/bandit/chem_expr/: kinetics.py  thermo.py
pyrometheus/bandit/impl/: cantera.py  plato.py
pyrometheus/codegen/: __init__.py  cpp.py  fortran.py  fortran90.py  fortranacc.py  python.py  python_bandit.py
pyrometheus/flamelets/: __init__.py  domain.py  equations.py  linear_solver.py  make_pyro.py  onedim_laplacian.py  solver.py  state.py  stencils.py  thermodynamic_consistency.py  utils.py
pyrometheus/mechanisms/: __init__.py
test/: .f2py_f2cmap  .gitignore  .test-conda-env-py3.yml  CMakeLists.txt  backends.py  binding.cxx.in  codegen.py  conftest.py  sanDiego.cti  test.py  test_codegen.py  test_codegen_jax.py  test_cpp.py  test_plato_mechanism.py  wrapper.cpp
test/mechs/: UConn32.cti  const-cp.yaml  gri30.cti  gri30.yaml  hong.yaml  sanDiego.cti  sanDiego.py  sandiego.yaml  uconn32.yaml  uiuc.cti  uiuc.py  uiuc.yaml
